--- a/Result.html
+++ b/Result.html
@@ -4,20 +4,31 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Meet Your Type</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css"/>
   <style>
+    body {
+      font-family: 'Montserrat', sans-serif;
+    }
+
     .result {
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
       text-align: center;
-      padding: 20px;
       flex-direction: column;
+      color: white;
+      padding: 20px;
     }
+
     .result h1 {
       font-size: 2.5rem;
     }
+
+    .result em {
+      font-style: italic;
+    }
+
     .result p {
       font-size: 1.2rem;
       margin-top: 20px;
@@ -42,9 +53,5 @@
     document.body.style.backgroundColor = background;
 
     resultBox.innerHTML = `
-      <h1>Meet your type in the ${room} room!</h1>
-      ${showExtra ? '<p>Audition for our reality dating show by participating in our speed dating game, The Pickup Line!</p>' : ''}
-    `;
-  </script>
-</body>
-</html>
+      <h1>Meet your type in the <em>${room} room</em>!</h1>
+      ${showExtra ? '<p>Audition for our reality dating show by participating
