--- a/Result.html
+++ b/Result.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Meet Your Type</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Your Match Room</title>
+
+  <!-- same fonts as main page -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,600&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
+    body{
+      margin:0;
+      font-family:'Montserrat',sans-serif;
+      color:#ffffff;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      min-height:100vh;
+      text-align:center;
+      padding:20px;
     }
-
-    .result {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      text-align: center;
-      flex-direction: column;
-      color: white;
-      padding: 20px;
+    h1{
+      font-family:'Poppins',sans-serif;
+      font-style:italic;
+      font-weight:600;
+      font-size:2.6rem;
+      margin:0;
+      line-height:1.1;
+      text-shadow:
+        0 0 6px #ff69b4,
+        0 0 12px #ff69b4,
+        0 0 20px #ff69b4;
     }
-
-    .result h1 {
-      font-size: 2.5rem;
-    }
-
-    .result em {
-      font-style: italic;
-    }
-
-    .result p {
-      font-size: 1.2rem;
-      margin-top: 20px;
-    }
+    p{font-size:1.2rem;margin-top:24px;}
+    .room-name{font-style:italic;}
   </style>
 </head>
 <body>
-  <div class="result" id="resultBox"></div>
+  <div id="resultBox"></div>
 
   <script>
-    const resultColor = localStorage.getItem('resultColor');
-    const showExtra = localStorage.getItem('showExtra') === 'true';
-    const resultBox = document.getElementById('resultBox');
+    const resultColor = localStorage.getItem("resultColor") || "blue";
+    const showExtra   = localStorage.getItem("showExtra") === "true";
 
-    let background = '#064D95', room = 'blue';
-    if (resultColor === 'green') {
-      background = '#06954E'; room = 'green';
-    } else if (resultColor === 'red') {
-      background = '#950606'; room = 'red';
-    }
+    let bg   = "#064D95",
+        room = "blue room";
+    if(resultColor === "green"){ bg="#06954E"; room="green room"; }
+    if(resultColor === "red")  { bg="#950606"; room="red room";  }
 
-    document.body.style.backgroundColor = background;
-
-    resultBox.innerHTML = `
-      <h1>Meet your type in the <em>${room} room</em>!</h1>
-      ${showExtra ? '<p>Audition for our reality dating show by participating
+    document.body.style.backgroundColor = bg;
+    document.getElementById("resultBox").innerHTML = `
+      <h1>Meet your type in the <span class="room-name">${room}</span>!</h1>
+      ${ showExtra ? `<p>Audition for our reality dating show by participating in our speed-dating game, <em>The Pickup Line</em>!</p>` : "" }
+    `;
+  </script>
+</body>
+</html>
