--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="content-box">
     <!-- logo in border area -->
-    <img src="A1124577-94BD-4B7D-A734-044783597524.jpeg" alt="logo" class="logo">
+    <img src="logo.jpeg" alt="logo" class="logo">
 
     <h1 class="neon-title">
       The&nbsp;1st<br>
